--- a/style.css
+++ b/style.css
@@ -32,6 +32,17 @@ html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
 header#html5-ch1-7header.data .fixed-top {
   background: #07062f;
+     padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 30%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
 }
 
 header#html5-ch1-7header.data .logo {
