--- a/style.css
+++ b/style.css
@@ -6,20 +6,34 @@ div.wrapper {
     top: 0em; 
     left: 0; 
     width: 100%; 
-    margin: auto;  padding: .3em .8em;
-  border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);*/
-  border-radius: .2em;
-  box-shadow: 0 .05em .25em hsla(0,0,0,.5);
-  color: white;
-  text-shadow: 0 -.05em .05em hsla(0,0,0,.5);
-  font-size: 100%;
+    margin: auto;  
 	
-  line-height: 1.5;
-  border-width: 10px;
-  border-left-width: 0px; 
-}
-
+	padding: .3em .8em;
+    border: 1px solid rgba(0,0,0,.1);
+    /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);*/
+    border-radius: .2em;
+    box-shadow: 0 .05em .25em hsla(0,0,0,.5);
+    color: white;
+    text-shadow: 0 -.05em .05em hsla(0,0,0,.5);
+    font-size: 100%;
+	
+    line-height: 1.5;
+    border-width: 10px;
+    border-left-width: 0px; 
+  }
+div#container.data { 
+	padding: .3em .8em;
+    border: 1px solid rgba(0,0,0,.1);
+    background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+    border-radius: .2em;
+    box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+    color: white;
+    text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+    font-size: 100%;
+    line-height: 1.5;
+    border-width: 10px;
+    border-left-width: 0px;
+  }
 
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.)
@@ -163,18 +177,7 @@ article,
 nav {
   display: block;
 }
-div#container.data { padding: .3em .8em;
-  border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
-  border-radius: .2em;
-  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
-  color: white;
-  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
-  font-size: 100%;
-  line-height: 1.5;
-  border-width: 10px;
-  border-left-width: 0px;
-}
+
 
 
 /*remove the # from #header*/
