--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ header#html5-ch1-7header.data .logo {
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
-  font-size: 50%;
+  font-size: 80%;
   line-height: 1.5;
   border-width: 10px;
   border-left-width: 0px;
@@ -145,7 +145,7 @@ p {
 h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
 				   padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
