--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header#html5-ch1-7header.data .fixed-top {
   background: #07062f;
      padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
