--- a/style.css
+++ b/style.css
@@ -35,6 +35,23 @@ div#container.data {
     border-left-width: 0px;
   }
 
+nav#nav.data {
+	padding: .3em .8em;
+  border: 1px solid rgba(0,0,0,.1);
+  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+  border-radius: .2em;
+  box-shadow: 0 .05em .25em rgba(0,0,0,.5);
+  color: white;
+  text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
+  font-size: 50%;
+  line-height: 1.5;
+  border-width: 10px;
+  border-left-width: 0px;
+}
+
+
+  
+
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
 (The key items are picked out in bold type.)
 equalise for various browsers and change #header to header*/
