--- a/style.css
+++ b/style.css
@@ -99,7 +99,9 @@ header#html5-ch1-7header.data .logo {
 }
 
 header#html5-ch1-7header.data .logo a {
-  color: #fff;  padding: .3em .8em;
+  color: #fff;  
+	
+	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
@@ -113,7 +115,9 @@ header#html5-ch1-7header.data .logo a {
 }
 
 header#html5-ch1-7header.data .logo img {
-  max-height: 40px;  padding: .3em .8em;
+  max-height: 40px;  
+	
+	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
@@ -127,7 +131,9 @@ header#html5-ch1-7header.data .logo img {
 }
 
 /*set images to have no borders*/
-img { border:0;  padding: .3em .8em;
+img { border:0;  
+	 
+	 padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
@@ -146,7 +152,9 @@ p {
 
     color: #000;
     margin:auto; 
-    text-align:center; padding: .3em .8em;
+    text-align:center; 
+	
+	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
@@ -307,7 +315,7 @@ div#html5-ch1-7col.data {
   width: 310px;
   vertical-align: top;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -326,7 +334,7 @@ div#html5-ch1-7midcol.data {
   margin-top: -284px;
   vertical-align: top;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -343,7 +351,7 @@ div#html5-ch1-7midcol.data {
 nav#html5-ch1-7nav.data ul {
   margin: -3px 0 10px 0;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -360,7 +368,7 @@ nav#html5-ch1-7nav.data ul {
 nav#html5-ch1-7nav.data li {
   list-style-type: none; padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
