--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+body {
+ font-size: 2rem;
+}
 article,aside,details,figcaption,figure,footer,header,hgroup,nav,section { display:block; }
 div.wrapper { 
     position: relative; 
