--- a/style.css
+++ b/style.css
@@ -231,7 +231,7 @@ h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; t
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
-  font-size: 200%;
+  font-size: xx-large;
   line-height: 1.5;
   border-width: 10px;
   border-left-width: 0px;
