--- a/style.css
+++ b/style.css
@@ -344,7 +344,7 @@ h2#html5-ch1-7h2 {
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
-  font-size: 250%;
+  font-size: x-large;
   line-height: 1.5;
   border-width: 10px;
   border-left-width: 0px;
