--- a/style.css
+++ b/style.css
@@ -217,13 +217,13 @@ p {
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
-  font-size: 100%;
+  
   line-height: 1.5;
   border-width: 10px;
   border-left-width: 0px;
 }
 
-h1#html5-ch1-7h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
+h1#html5-ch1-7h1 { color :white; position: relative; left:15%; top: 55px; width:480px;
 				   padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
