--- a/style.css
+++ b/style.css
@@ -1,6 +1,19 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
 body {
+ margin: 2rem;
+}
+
+h1 {
+ border-width: 1px;
+ border-style: solid;
+ border-color: black;
+ font-size: 72px;
+ font-family: Verdana;
+ text-align: center;
+}
+        
+body {
  width: 50vw;
  height: 50vh;
  border: 1px solid black;
