--- a/style.css
+++ b/style.css
@@ -2,6 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
 body {
  margin: 2rem;
+}
+
+div {
+ font-size: 2rem;
+ font-family: "Gill Sans", Calibri, Verdana, sans-serif;
+}
+body {
+ margin: 2rem;
  font-size: 16px;
 }
 
