--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+div {
+ font-size: 4rem;
+ font-family: Calibri, sans-serif;
+}
 body {
  margin: 2rem;
 }
