--- a/style.css
+++ b/style.css
@@ -1,5 +1,18 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+body {
+ margin: 2rem;
+ width: 500px;
+}
+
+article {
+ font-size: 1.5rem;
+ font-family: Georgia, serif;
+}
+
+span {
+ font-style: italic;
+}
 div {
  font-size: 4rem;
  font-family: Calibri, sans-serif;
