--- a/style.css
+++ b/style.css
@@ -554,7 +554,7 @@ li.btn a {
   border-left-width: 0px;
 }
 
-/* mouseover */
+/* mouseover *
 li.btn a:hover {
   background: red;
   color: white;
@@ -673,7 +673,7 @@ nav li { list-style-type:none;
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* 18CHAPTER 1 ■ MOVING TO HTML5 */
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
