--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -123,7 +123,7 @@ div#container.data { padding: .3em .8em;
 }
 
 /*remove the # from #header*/
-header#html5-ch1-7header {
+header#html5-style-2header {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -176,7 +176,7 @@ div.col-12 {
 
 }
 
-h1#html5-ch1-7h1 {
+h1#html5-style-2h1 {
     font-size: 150%;
     color: white;
     position: relative;
@@ -186,7 +186,7 @@ h1#html5-ch1-7h1 {
 
 }
 
-div#html5-ch1-7content.data {
+div#html5-style-2content.data {
     background-color:transparent; 
     border-left:10px white solid; 
     border-right:10px white solid; 
@@ -239,7 +239,7 @@ br {
 
 }
 
-nav#html5-ch1-7nav.data {
+nav#html5-style-2nav.data {
     margin: -296px 0 10px 0;
     width: 135px;
     float: right;
@@ -252,14 +252,14 @@ li.btn {
   width: 130px;
 }
 
-div#html5-ch1-7midcol.data {
+div#html5-style-2midcol.data {
     margin-left: 315px;
     margin-right: 145px;
     margin-top: -275px;
     vertical-align: top;
 }
 
-#html5-ch1-7midcol.data img {
+#html5-style-2midcol.data img {
     margin-top: 10px;
 }
 
