--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ header#html5-ch1-7header.data .logo {
   border-left-width: 0px;
 }
 
-header#html5-ch1-7header.data .logo a {
+header#html5-style-2header.data .logo a {
   color: #fff;  
 	
 	padding: .3em .8em;
