--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ div.wrapper {
     border-width: 10px;
     border-left-width: 0px; 
   }
-div#container.data { 
+div#content.data { 
 	padding: .3em .8em;
     border: 1px solid red;
    /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);*/
