--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -12,37 +12,36 @@ header, footer, section, article, nav { display:block;
 header#html5-style-2header {width:920px; height:180px; padding:0; border:10px white solid; 
 background: url(images/header3.jpg); margin:10px auto;
 }
-h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
+h1#html5-style-2h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#content { background-color:transparent; border-left:10px white solid; 
+#html5-style-2content { background-color:transparent; border-left:10px white solid; 
 border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
 margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; 
 font-size:medium; color:maroon;
 }
-h2 { font-size:x-large; color:white; margin:0 0 10px 0;
+h2#html5-style-2h2 { font-size:x-large; color:white; margin:0 0 10px 0;
 }
-h3 { font-size:large; color:white; margin:0 0 6px 0;
+h3#html5-style-2h3 { font-size:large; color:white; margin:0 0 6px 0;
 }
-#leftcol { float:left; width: 310px; vertical-align:top;
+#html5-style-2leftcol { float:left; width: 310px; vertical-align:top;
 }
-#rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+#html5-style-2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
+#html5-style-2midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
 vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
 nav ul { margin:10px 0 10px 0; width:135px; float:right;
 }
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav li { list-style-type:none;
+nav#html5-style-2nav li { list-style-type:none;
 }
 /* set general side button styles */
 li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
-18CHAPTER 1 ■ MOVING TO HTML5
 /* set general anchor styles and include the zoom fix for IE6*/
 li.btn a { display: block; color: white; font-weight: bold; 
 text-decoration: none; zoom:1;
@@ -60,10 +59,10 @@ li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
-#midcol img { margin-left:10px;
+#html5-style-2midcol img { margin-left:10px;
 }
 /*change #footer to footer */
-footer { clear:both; color:maroon; text-align:center;
+footer#html5-style-2footer { clear:both; color:maroon; text-align:center;
 }
 /*equalise for various browsers and change #header to header*/
 div body header #content {
