--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ header#html5-style-2header.data .fixed-top {
   border-left-width: 0px;
 }
 
-header#html5-ch1-7header.data .logo {
+header#html5-style-2header.data .logo {
  /* font-size: 30px; */
   margin-top: 150px;
   padding: 0;
@@ -228,7 +228,7 @@ header#html5-style-2header.data .logo a {
   border-left-width: 0px;
 }
 
-header#html5-ch1-7header.data .logo img {
+header#html5-style-2header.data .logo img {
   max-height: 40px;  
 	
 	padding: .3em .8em;
@@ -286,7 +286,7 @@ p {
   border-left-width: 0px;
 }
 
-h1#html5-ch1-7h1 { color :white; position: relative; left:15%; top: 55px; width:480px; 
+h1#html5-style-2h1 { color :white; position: relative; left:15%; top: 55px; width:480px; 
 	padding: .3em .8em; border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
@@ -324,7 +324,7 @@ nav {
 
 
 /*remove the # from #header*/
-header#html5-ch1-7header.data {
+header#html5-style-2header.data {
   width: 920px;
   height: 180px;
   padding: 0;
@@ -346,7 +346,7 @@ header#html5-ch1-7header.data {
 
 }
 
-h1#html5-ch1-7h1 {
+h1#html5-style-2h1 {
  /* font-size: 300%; */
   color: white;
   position: relative;
@@ -365,7 +365,7 @@ h1#html5-ch1-7h1 {
   border-left-width: 0px;
 }
 
-#html5-ch1-7rosette {
+#html5-style-2rosette {
   position: relative;
   left: 750px;
   top: 5px;  padding: .3em .8em;
@@ -381,7 +381,7 @@ h1#html5-ch1-7h1 {
   border-left-width: 0px;
 }
 
-div#html5-ch1-7content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
+div#html5-style-2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
 /*  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
@@ -395,7 +395,7 @@ border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto
   border-left-width: 0px; 
 }
 
-h2#html5-ch1-7h2 {
+h2#html5-style-2h2 {
  /* font-size: x-large; */
   color: white;
   margin: 0 0 10px 0;
@@ -412,7 +412,7 @@ h2#html5-ch1-7h2 {
   border-left-width: 0px;
 }
 
-h3#html5-ch1-7h3 {
+h3#html5-style-2h3 {
 /*  font-size: large; */
   color: white;
   margin: 10px 0 6px 0; padding: .3em .8em;
@@ -428,7 +428,7 @@ h3#html5-ch1-7h3 {
   border-left-width: 0px;
 }
 
-div#html5-ch1-7col.data {
+div#html5-style-2col.data {
   float: left;
   width: 310px;
   vertical-align: top;  padding: .3em .8em;
@@ -444,7 +444,7 @@ div#html5-ch1-7col.data {
   border-left-width: 0px;
 }
 
-/*#html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+/*#html5-style-2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
 div#html5-ch1-7midcol.data {
   margin-left: 315px;
@@ -466,7 +466,7 @@ div#html5-ch1-7midcol.data {
 /*set nav block position and width*/
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
 }*/
-nav#html5-ch1-7nav.data ul {
+nav#html5-style-2nav.data ul {
   margin: -3px 0 10px 0;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
@@ -483,7 +483,7 @@ nav#html5-ch1-7nav.data ul {
 }
 
 /*Set un-ordered list style within the menu block only. This removes bullets*/
-nav#html5-ch1-7nav.data li {
+nav#html5-style-2nav.data li {
   list-style-type: none; padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
@@ -591,7 +591,7 @@ br.clear {
   clear: both;
 }
 
-#html5-ch1-7midcol.data img {
+#html5-style-2midcol.data img {
   margin-top: 10px;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
   background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
@@ -605,7 +605,7 @@ br.clear {
   border-left-width: 0px;
 }
 
-footer#html5style2.data {
+footer#html5-style-2.data {
   clear: both;
   color: white;
   text-align: center;  padding: .3em .8em;
