--- a/style.css
+++ b/style.css
@@ -249,7 +249,7 @@ img { border:0;
 	 
 	 padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -259,7 +259,7 @@ img { border:0;
   border-width: 10px;
   border-left-width: 0px;
 }
-/*add display attributes for the semantic tags*/
+/*add display attributes for the semantic tags*
 header, footer, section, article, nav { display:block;
 }
 p {
@@ -275,7 +275,7 @@ p {
 	
 	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -288,7 +288,7 @@ p {
 
 h1#html5-style-2h1 { color :white; position: relative; left:15%; top: 55px; width:480px; 
 	padding: .3em .8em; border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
