--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
 @import url('https://fonts.googleapis.com/css?family=Raleway:300');
+article,aside,details,figcaption,figure,footer,header,hgroup,nav,section { display:block; }
+div.wrapper { position: relative;  top: 0em;  left: 0;  width: 100%;  margin: auto; }
 /*
 body {
  margin: 2rem;
@@ -114,14 +116,7 @@ aside {
 }
 
 */
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section { display:block; }
-div.wrapper { 
-    position: relative; 
-    top: 0em; 
-    left: 0; 
-    width: 100%; 
-    margin: auto;   
-  }
+
 div#html5-style-2content.data { 
 	
   }
