--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -134,9 +134,9 @@ header#html5-style-2header {
 div.row {
   
 }
-
+/*
 nav#nav.data {
-	padding: .3em .8em;
+	padding: 5.3em 1.8em;
   border: 1px solid rgba(0,0,0,.1);
   background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent);
   border-radius: .2em;
@@ -174,7 +174,7 @@ li {
 div.col-12 {
 
 }
-
+*/
 h1#html5-style-2h1 {
     font-size: 150%;
     color: white;
@@ -610,4 +610,5 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 /* MouseOver state (hover)- reveal larger picture */ 
 #col-3a:hover { background: white; 
 } 
+
 #col-3 a:hover img.hid { visibility:visible;
