--- a/nav[1].css
+++ b/nav[1].css
@@ -12,7 +12,7 @@ body {
     padding: 0;
   }
 }
-/* needed for checkbox hack */
+/* needed for checkbox hack 
 
 #nav {
   position: relative;
@@ -28,6 +28,7 @@ body {
   border-width: 10px;
   border-left-width: 0px;
 }
+*/
 #nav ul {
   padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
