--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -10,7 +10,7 @@ header, footer, section, article, nav { display:block;
 }
 /*remove the # from #header*/
 header#html5-style-2header {width:920px; height:180px; padding:0; border:10px white solid; 
-background: url(images/header3.jpg); margin:10px auto;
+background: url(header3.jpg); margin:10px auto;
 }
 h1#html5-style-2h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
 width:480px;
@@ -612,3 +612,4 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
