--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -127,7 +127,7 @@ header#html5-style-2header {
   height: 180px;
   padding: 0;
   border: 10px white solid;
-  background: url(images/bda-20.jpg);
+  background: url(../bda-20.jpg);
   margin: 10px auto;
 }
 
@@ -612,4 +612,5 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
