--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -12,7 +12,7 @@ header, footer, section, article, nav { display:block;
 header#html5-style-2header {width:920px; height:180px; padding:0; border:10px white solid; 
 background: url(header3.jpg); margin:10px auto;
 }
-h1#html5-style-2h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
+h1#html5-style-2h1 { font-size:300%; color:rgba(0,0,0,.5); position: relative; left:90px; top: 55px;
 width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
@@ -612,6 +612,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
 
 
