--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -372,7 +372,7 @@ h1 {
 
 h3 {
   font-size: large;
-  color: white;
+  color: maroon;
   margin: 0 0 6px 0;
 }
 
@@ -612,6 +612,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
 
 
