--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -214,7 +214,7 @@ input, select, button { font: inherit; }
 
 h2 {
     font-size: x-large;
-    color: white;
+    color: maroon;
     margin: 0 0 10px 0;
 
 }
@@ -225,7 +225,7 @@ div#html5-ch1-7leftcol.data {
 
 h3 {
     font-size: large;
-    color: white;
+    color: maroon;
     margin: 0 0 6px 0;
 
 }
@@ -612,6 +612,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
 
 
