--- a/style.css
+++ b/style.css
@@ -374,7 +374,7 @@ border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto
 /*  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
-  color: white;
+  color:1px solid rgba(0,0,0,.5);
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
   font-size: 100%;
   line-height: 1.5;
