--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ header#html5-style-2header.data .fixed-top {
  /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
-  color: white;
+  color: 1px solid rgba(0,0,0,.1);
   text-shadow: 0 -.05em .05em rgba(0,0,0,.5);
   font-size: 100%;
   line-height: 1.5;
@@ -433,7 +433,7 @@ div#html5-style-2col.data {
 
 /*#html5-style-2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }*/
-div#html5-ch1-7midcol.data {
+div#html5-style-2midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: -284px;
