--- a/style.css
+++ b/style.css
@@ -1738,14 +1738,14 @@ nav ul, nav ol {
 li > ul,
 li > ol {
   margin-bottom: 0; }
-
+/*
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
   max-width: 100%;
   min-height: auto;
   vertical-align: middle; }
-
+*/
 svg:not(:root) {
   overflow: hidden; }
 
