--- a/style.css
+++ b/style.css
@@ -159,14 +159,14 @@ equalise for various browsers and change #header to header*/
 
 div body header #content { margin:0; padding:0; border:0;
 }
-/*set attributes for consistent appearance in all browsers*/
+/*set attributes for consistent appearance in all browsers*
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
 header#html5-style-2header.data .fixed-top {
   background: #07062f;
      padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: 1px solid rgba(0,0,0,.1);
@@ -178,7 +178,7 @@ header#html5-style-2header.data .fixed-top {
 }
 
 header#html5-style-2header.data .logo {
- /* font-size: 30px; */
+ /* font-size: 30px; *
   margin-top: 150px;
   padding: 0;
   line-height: 1;
@@ -188,7 +188,7 @@ header#html5-style-2header.data .logo {
 
   padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -204,7 +204,7 @@ header#html5-style-2header.data .logo a {
 	
 	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -220,7 +220,7 @@ header#html5-style-2header.data .logo img {
 	
 	padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -231,7 +231,7 @@ header#html5-style-2header.data .logo img {
   border-left-width: 0px;
 }
 
-/*set images to have no borders*/
+/*set images to have no borders*
 img { border:0;  
 	 
 	 padding: .3em .8em;
