--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -76,7 +76,7 @@ nav#html5-style-2nav, li.btn a { background:#559a55; color: white; border: 5px o
 padding-bottom:3px;
 }
 /* mouseover */
-li.btn a:hover { background: red; color:white; border: 5px outset red;
+nav#html5-style-2nav li.btn a:hover { background: red; color:white; border: 5px outset red;
 }
 /*mouse active*/
 nav#html5-style-2nav, li.btn a:active { background:maroon; border: 5px inset maroon;
@@ -633,6 +633,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
 
 
