--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ div.wrapper {
 	position: relative;  top: 0em;  left: 0;  width: 100%;  margin: auto; 
 }
 nav#nav.data { 
-	padding: 5.3em 1.8em; border: 1px solid rgba(0,0,0,.1); background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); 
+	/* padding: 5.3em 1.8em; border: 1px solid rgba(0,0,0,.1); background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
     border-radius: .2em; box-shadow: 0 .05em .25em rgba(0,0,0,.5); color: white; text-shadow: 0 -.05em .05em rgba(0,0,0,.5); font-size: 60%; line-height: 1.5; border-width: 10px; border-left-width: 0px; 
 }
 /*remove the # from #header
