--- a/style.css
+++ b/style.css
@@ -22,108 +22,13 @@ body { background: #FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 header, nav, footer, article section { display:block;
 }
-header#html5-style-2header { width:95%; max-width:1024px; min-width:900px; height:180px; 
-padding:0; border:10px white solid; background:url(../header3.jpg); 
-margin:20px auto;
+header#html5-style-2header { width:95%; max-width:1024px; min-width:900px; height:180px; padding:0; border:10px white solid; background:url(../header3.jpg); margin:20px auto;
 }
-h1 { font-size:300%; color :white; 
-position: absolute; left:15%; top: 55px; width: 480px;
+h1 { font-size: 40%; color :white; position: absolute; left:15%; top: 55px; width: 480px;
 }
 #rosette { position:relative; left:85%; top:120px;
 }
 
-body {
- margin: 2rem;
- width: 500px;
-}
-
-
-article {
- font-size: 1.5rem;
- font-family: Georgia, serif;
-}
-
-span {
- font-style: italic;
-}
-
-div {
- font-size: 4rem;
- font-family: Calibri, sans-serif;
-}
-body {
- margin: 2rem;
-}
-
-div {
- font-size: 2rem;
- font-family: "Gill Sans", Calibri, Verdana, sans-serif;
-}
-body {
- margin: 2rem;
- font-size: 16px;
-}
-
-div {
- font-size: 2em;
-}
-body {
- margin: 2rem;
- font-size: 16px;
-}
-
-article {
- font-size: 1.5em;
-}
-
-section {
- font-size: 1.25em;
-}
-body {
- margin: 2rem;
-}
-
-h1 {
- border-width: 1px;
- border-style: solid;
- border-color: black;
- font-size: 72px;
- font-family: Verdana;
- text-align: center;
-}
-        
-body {
- width: 50vw;
- height: 50vh;
- border: 1px solid black;
- margin: 0;
-}
-* {
- margin: 0;
- padding: 0;
- box-sizing: border-box;
-}
-body {
- margin: 2rem;
- width: 30rem;
-}
-nav {
- padding: .5rem 0;
- background-color: #ccc;
-}
-nav::after {
- content: '';
- display: block;
- clear: both;
-}
-nav ul {
- list-style-type: none;
- padding-left: 1.75rem;
-}
-nav li {
- float: left;
- padding-right: 1.75rem;
-}
 main {
  clear: left;
  margin-top: 1rem;
