--- a/css-jq/base.css
+++ b/css-jq/base.css
@@ -41,9 +41,8 @@ width:480px;
 }
 #rosette { position:relative; left:750px; top:5px;
 }
-#html5-style-2content { background-color:transparent; border-left:10px white solid; 
-border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
-margin-top:-10px; margin-left:auto; margin-right:auto; padding:8px; 
+#html5-style-2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
+margin-top: 82px; margin-left:auto; margin-right:auto; padding:8px; 
 font-size:medium; color:maroon;
 }
 h2#html5-style-2h2 { font-size:x-large; color:white; margin:0 0 10px 0;
@@ -634,6 +633,7 @@ position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 } 
 
 #col-3 a:hover img.hid { visibility:visible;
+
 
 
 
