--- a/style.css
+++ b/style.css
@@ -287,11 +287,11 @@ h1#html5-style-2h1 {
   border-width: 10px;
   border-left-width: 0px;
 }
-
+/*
 div#html5-style-2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 970px; margin-top:-26px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
-/*  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+/*  background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color:1px solid rgba(0,0,0,.5);
@@ -308,7 +308,7 @@ h2#html5-style-2h2 {
   margin: 0 0 10px 0;
 	 padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -320,11 +320,11 @@ h2#html5-style-2h2 {
 }
 
 h3#html5-style-2h3 {
-/*  font-size: large; */
+/*  font-size: large; *
   color: white;
   margin: 10px 0 6px 0; padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -340,7 +340,7 @@ div#html5-style-2col.data {
   width: 310px;
   vertical-align: top;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -352,14 +352,14 @@ div#html5-style-2col.data {
 }
 
 /*#html5-style-2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*/
+}*
 div#html5-style-2midcol.data {
   margin-left: 315px;
   margin-right: 145px;
   margin-top: -284px;
   vertical-align: top;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
@@ -370,13 +370,13 @@ div#html5-style-2midcol.data {
   border-left-width: 0px;
 }
 
-/*set nav block position and width*/
+/*set nav block position and width*
 /*nav { margin:10px 30px 0 10px; width:135px; float:right; 
-}*/
+}*
 nav#html5-style-2nav.data ul {
   margin: -3px 0 10px 0;  padding: .3em .8em;
   border: 1px solid rgba(0,0,0,.1);
- /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); */
+ /* background: #58a linear-gradient(hsla(0,0%,100%,.2),transparent); *
   border-radius: .2em;
   box-shadow: 0 .05em .25em rgba(0,0,0,.5);
   color: white;
